homography test passes

--- a/fit_homography.ipynb
+++ b/fit_homography.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -35,20 +35,137 @@
     "import pandas as pd\n",
     "\n",
     "A = pd.read_csv(\"A.csv\").values\n",
+    "\n",
+    "\n",
     "import numpy as np\n",
     "\n",
     "x = np.array(A[:, 0:3].astype(np.float32))\n",
-    "x = np.hstack([x, np.ones([len(x[:, 0]), 1])])\n",
     "\n",
     "y = np.array(A[:, 3:5].astype(np.float32))\n",
+    "\n",
+    "\n",
     "from homography import Transformer\n",
     "\n",
     "t = Transformer(img_size=512)\n",
     "t.fit_homography(x, y)\n",
+    "\n",
+    "\n",
     "import pickle\n",
     "\n",
     "with open('./transformer.pickle', 'wb') as f:\n",
     "    pickle.dump(t, f)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [],
+   "source": [
+    "    with open(\"./transformer.pickle\", 'rb') as f:\n",
+    "        transformer = pickle.load(f)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.1"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transformer.x_scale"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.1"
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transformer.y_scale"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[-6.1601562, 11.394531 ,  9.465935 ],\n       [-0.6418457,  1.1850586,  9.989228 ],\n       [-1.3933105, -2.8947754,  9.989228 ],\n       [ 5.19311  ,  4.43164  , 15.23828  ],\n       [-0.682373 , -6.401855 , 11.99092  ],\n       [-0.8232422, -3.3674316, 15.540527 ],\n       [ 0.3359375, -6.0234375,  9.98703  ],\n       [-0.5180664, -2.2033691, 11.738525 ],\n       [-4.9975586,  4.974365 ,  7.9972534]], dtype=float32)"
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[0.18008994, 0.08024847],\n       [0.42693213, 0.40739048],\n       [0.39500483, 0.56203653],\n       [0.85522305, 0.11519649],\n       [0.51922833, 1.19261404],\n       [0.45284778, 0.62325085],\n       [0.534528  , 0.7641677 ],\n       [0.45358647, 0.49414195],\n       [0.2497464 , 0.30414256]])"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.homography_transform(x)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[0.18945312, 0.10351562],\n       [0.4609375 , 0.4296875 ],\n       [0.41601562, 0.6269531 ],\n       [0.8339844 , 0.08789062],\n       [0.45507812, 0.83203125],\n       [0.4453125 , 0.5175781 ],\n       [0.5214844 , 0.83203125],\n       [0.47070312, 0.43554688],\n       [0.22070312, 0.2578125 ]], dtype=float32)"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
    ],
    "metadata": {
     "collapsed": false
