--- a/fit_homography.ipynb
+++ b/fit_homography.ipynb
@@ -2,32 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Homography Residuals: [0.00242039]\n",
-      "Least Squares Check: b, A @ X, b - A @ X\n",
-      "[[ 1.89453125e-01  1.85412303e-01  4.04082185e-03]\n",
-      " [ 1.03515625e-01  9.34743404e-02  1.00412846e-02]\n",
-      " [ 4.60937500e-01  4.49132447e-01  1.18050527e-02]\n",
-      " [ 4.29687500e-01  4.21947030e-01  7.74047024e-03]\n",
-      " [ 4.16015625e-01  4.10748497e-01  5.26712799e-03]\n",
-      " [ 6.26953125e-01  6.10679390e-01  1.62737352e-02]\n",
-      " [ 8.33984375e-01  8.38516184e-01 -4.53180865e-03]\n",
-      " [ 8.78906250e-02  9.37170243e-02 -5.82639928e-03]\n",
-      " [ 4.55078125e-01  4.59626799e-01 -4.54867440e-03]\n",
-      " [ 8.32031250e-01  8.57598957e-01 -2.55677070e-02]\n",
-      " [ 4.45312500e-01  4.44487474e-01  8.25025896e-04]\n",
-      " [ 5.17578125e-01  5.06008184e-01  1.15699411e-02]\n",
-      " [ 5.21484375e-01  5.24569517e-01 -3.08514181e-03]\n",
-      " [ 8.32031250e-01  8.15979829e-01  1.60514213e-02]\n",
-      " [ 4.70703125e-01  4.67775204e-01  2.92792143e-03]\n",
-      " [ 4.35546875e-01  4.45569965e-01 -1.00230898e-02]\n",
-      " [ 2.20703125e-01  2.33403450e-01 -1.27003250e-02]\n",
-      " [ 2.57812500e-01  2.78072156e-01 -2.02596563e-02]]\n"
+      "C:\\Users\\natha\\Documents\\School\\FS22\\CSE803\\Project\\py-sc\\803-Final-Project\\homography.py:28: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  self.H = np.linalg.lstsq(x, y)[0]\n"
      ]
     }
    ],
@@ -61,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "    with open(\"./transformer.pickle\", 'rb') as f:\n",
@@ -73,13 +56,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
-      "text/plain": "0.1"
+      "text/plain": "0.05"
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,13 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "outputs": [
     {
      "data": {
       "text/plain": "0.1"
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,13 +96,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[-6.1601562, 11.394531 ,  9.465935 ],\n       [-0.6418457,  1.1850586,  9.989228 ],\n       [-1.3933105, -2.8947754,  9.989228 ],\n       [ 5.19311  ,  4.43164  , 15.23828  ],\n       [-0.682373 , -6.401855 , 11.99092  ],\n       [-0.8232422, -3.3674316, 15.540527 ],\n       [ 0.3359375, -6.0234375,  9.98703  ],\n       [-0.5180664, -2.2033691, 11.738525 ],\n       [-4.9975586,  4.974365 ,  7.9972534]], dtype=float32)"
+      "text/plain": "array([[ 3.7407227 ,  1.7524414 , 11.988958  ],\n       [ 2.7407227 ,  1.7526855 , 11.988958  ],\n       [ 1.7409668 ,  1.7531738 , 11.988958  ],\n       [ 0.74121094,  1.7539062 , 11.988958  ],\n       [-0.25830078,  1.7546387 , 11.988958  ],\n       [-1.2575684 ,  1.7558594 , 11.988958  ],\n       [-1.2561035 ,  0.7573242 , 11.988958  ],\n       [-1.2548828 , -0.24169922, 11.988958  ],\n       [-1.2539062 , -1.2412109 , 11.988958  ],\n       [-1.253418  , -2.2409668 , 11.988958  ],\n       [-1.2529297 , -3.2407227 , 11.988958  ],\n       [-1.2524414 , -4.2407227 , 11.988958  ]], dtype=float32)"
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,15 +116,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "outputs": [
     {
-     "data": {
-      "text/plain": "array([[0.18008994, 0.08024847],\n       [0.42693213, 0.40739048],\n       [0.39500483, 0.56203653],\n       [0.85522305, 0.11519649],\n       [0.51922833, 1.19261404],\n       [0.45284778, 0.62325085],\n       [0.534528  , 0.7641677 ],\n       [0.45358647, 0.49414195],\n       [0.2497464 , 0.30414256]])"
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'tuple' object has no attribute 'T'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "\u001B[1;32m~\\AppData\\Local\\Temp\\ipykernel_10504\\4121064065.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0mt\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mhomography_transform\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mx\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[1;32m~\\Documents\\School\\FS22\\CSE803\\Project\\py-sc\\803-Final-Project\\homography.py\u001B[0m in \u001B[0;36mhomography_transform\u001B[1;34m(self, X)\u001B[0m\n\u001B[0;32m     15\u001B[0m         \u001B[1;31m# Y = np.array([np.matmul(self.H, X[i]) for i in range(n)])\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     16\u001B[0m         \u001B[1;31m# Should be same result as above, but in matrix form.\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 17\u001B[1;33m         \u001B[0mY\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mX\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mdot\u001B[0m\u001B[1;33m(\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mH\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mT\u001B[0m \u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     18\u001B[0m         \u001B[0mYn\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mY\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;36m0\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;36m2\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m/\u001B[0m \u001B[0mY\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;36m2\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;36m3\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;31m# Y, normalized\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     19\u001B[0m         \u001B[1;32mreturn\u001B[0m \u001B[0mYn\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mAttributeError\u001B[0m: 'tuple' object has no attribute 'T'"
+     ]
     }
    ],
    "source": [
@@ -153,19 +140,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[0.18945312, 0.10351562],\n       [0.4609375 , 0.4296875 ],\n       [0.41601562, 0.6269531 ],\n       [0.8339844 , 0.08789062],\n       [0.45507812, 0.83203125],\n       [0.4453125 , 0.5175781 ],\n       [0.5214844 , 0.83203125],\n       [0.47070312, 0.43554688],\n       [0.22070312, 0.2578125 ]], dtype=float32)"
+      "text/plain": "array([[1.4355469 , 0.80859375],\n       [1.3183594 , 0.80859375],\n       [1.2011719 , 0.80859375],\n       [1.0839844 , 0.80859375],\n       [0.9667969 , 0.80859375],\n       [0.8496094 , 0.80859375],\n       [0.8496094 , 0.9160156 ],\n       [0.8496094 , 1.0019531 ],\n       [0.8496094 , 1.1132812 ],\n       [0.8496094 , 1.2109375 ],\n       [0.8496094 , 1.3203125 ],\n       [0.8496094 , 1.4492188 ],\n       [0.18945312, 0.10351562],\n       [0.4609375 , 0.4296875 ],\n       [0.41601562, 0.6269531 ],\n       [0.8339844 , 0.08789062],\n       [0.45507812, 0.83203125],\n       [0.4453125 , 0.5175781 ],\n       [0.5214844 , 0.83203125],\n       [0.47070312, 0.43554688],\n       [0.22070312, 0.2578125 ]], dtype=float32)"
      },
-     "execution_count": 18,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "y"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\natha\\AppData\\Local\\Temp\\ipykernel_18752\\1483668873.py:1: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  np.linalg.lstsq(x, y)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "(array([[ 0.07231373, -0.03198319],\n        [ 0.01374402, -0.05186034],\n        [ 0.06692821,  0.06332152]], dtype=float32),\n array([1.3110583, 1.790185 ], dtype=float32),\n 3,\n array([54.17134 , 18.383343, 11.046874], dtype=float32))"
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.lstsq(x, y)"
    ],
    "metadata": {
     "collapsed": false
