--- a/william.tex
+++ b/william.tex
@@ -11,11 +11,11 @@ $C$ is the full camera matrix:
 
 $A$ is the affine matrix:
 \begin{equation}
-	A = \begin{Bmatrix}
+	A = \begin{bmatrix}
 		1 & 0 & a_x \\
 		0 & -1 & a_y \\
 		0 & 0 & 1
-	\end{Bmatrix}
+	\end{bmatrix}
 \end{equation}
 Where $a_x$ and $a_y$ equal 0.5, which shifts the screen-space projection so that the camera target is in the middle of the screen (screen space coordinates (0.5, 0.5)).
 	
@@ -39,16 +39,16 @@ Where $FOV$ is the field of view in radians.
 $E$ is the extrinsic matrix:
 
 \begin{equation}
-	E = \begin{Bmatrix}
+	E = \begin{bmatrix}
 		1 & 0 & 0 & 0 \\
 		0 & \cos p & \sin p & 0 \\
 		0 & \sin p & -\cos p & c_z \\
 		0 & 0 & 0 & 1 \\
-	\end{Bmatrix}
+	\end{bmatrix}
 \end{equation}
 
 Where $p$ is the pitch from vertical in radians, and $c_z$ is the camera Z-value in its own coordinate frame, which is the distance from the target point.
 
-The geometric parameters for the final homography were: $$FOV=25.3^\circ, c_z = 36.3, p = 32.72^\circ$$.  (Angles were converted from degrees to radians in software.)
+The geometric parameters for the final homography were: $$FOV=25.3^\circ, c_z = 36.3, p = 32.72^\circ$$  (Angles were converted from degrees to radians in software.)
 
 \end{document}
